hphp/hack/test/typecheck/instanceof/instanceof_generic_good.php.like_types.exp
File "instanceof_generic_good.php", line 23, characters 17-18:
Invalid argument (Typing[4110])
File "instanceof_generic_good.php", line 15, characters 22-25:
Expected Base
File "instanceof_generic_good.php", line 18, characters 66-66:
But got dynamic because it is an unenforceable type
